@@ -1,16 +1,9 @@
 package mcjty.xnet.datagen;
 
 import net.minecraft.data.DataGenerator;
-import net.minecraft.data.ItemTagsProvider;
-import net.minecraft.data.TagsProvider;
-import net.minecraft.item.Item;
-import net.minecraft.tags.TagCollection;
-import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.event.lifecycle.GatherDataEvent;
-
-import java.nio.file.Path;
 
 @Mod.EventBusSubscriber(bus = Mod.EventBusSubscriber.Bus.MOD)
 public class DataGenerators {
@@ -18,8 +11,14 @@ public class DataGenerators {
     @SubscribeEvent
     public static void gatherData(GatherDataEvent event) {
         DataGenerator generator = event.getGenerator();
-        generator.addProvider(new Recipes(generator));
-        generator.addProvider(new LootTables(generator));
-        generator.addProvider(new ItemTags(generator));
+        if (event.includeServer()) {
+            generator.addProvider(new Recipes(generator));
+            generator.addProvider(new LootTables(generator));
+            generator.addProvider(new ItemTags(generator));
+        }
+        if (event.includeClient()) {
+            generator.addProvider(new BlockStates(generator, event.getExistingFileHelper()));
+            generator.addProvider(new Items(generator, event.getExistingFileHelper()));
+        }
     }
 }
