@@ -1,24 +1,50 @@
 {
-  "forge_marker": 1,
-  "defaults": {
-    "model": "xnet:block/router"
-  },
   "variants": {
-    "facing": {
-      "north": {},
-      "south": {"y": 180},
-      "west": {"y": 270},
-      "east": {"y": 90},
-      "up": {"x": -90},
-      "down": {"x": 90}
+    "error=false,facing=down": {
+      "model": "xnet:block/router",
+      "x": 90
     },
-    "error": {
-      "false": {
-        "model": "xnet:block/router"
-      },
-      "true": {
-        "model": "xnet:block/router_error"
-      }
+    "error=true,facing=down": {
+      "model": "xnet:block/router_error",
+      "x": 90
+    },
+    "error=false,facing=up": {
+      "model": "xnet:block/router",
+      "x": -90
+    },
+    "error=true,facing=up": {
+      "model": "xnet:block/router_error",
+      "x": -90
+    },
+    "error=false,facing=north": {
+      "model": "xnet:block/router"
+    },
+    "error=true,facing=north": {
+      "model": "xnet:block/router_error"
+    },
+    "error=false,facing=south": {
+      "model": "xnet:block/router",
+      "y": 180
+    },
+    "error=true,facing=south": {
+      "model": "xnet:block/router_error",
+      "y": 180
+    },
+    "error=false,facing=west": {
+      "model": "xnet:block/router",
+      "y": 270
+    },
+    "error=true,facing=west": {
+      "model": "xnet:block/router_error",
+      "y": 270
+    },
+    "error=false,facing=east": {
+      "model": "xnet:block/router",
+      "y": 90
+    },
+    "error=true,facing=east": {
+      "model": "xnet:block/router_error",
+      "y": 90
     }
   }
 }
