@@ -1,6 +1,11 @@
 {
-  "parent": "xnet:block/xnetblock",
+  "parent": "block/cube",
   "textures": {
-    "front": "xnet:block/machine_router_error"
+    "down": "rftoolsbase:block/base/machinebottom",
+    "up": "rftoolsbase:block/base/machinetop",
+    "north": "xnet:block/machine_router_error",
+    "south": "rftoolsbase:block/base/machineside",
+    "east": "rftoolsbase:block/base/machineside",
+    "west": "rftoolsbase:block/base/machineside"
   }
 }
